example/generated/kube-1/echo_test/echo-test.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: http-echo
  name: http-echo
spec:
  ports:
  - name: "5678"
    port: 5678
    targetPort: 5678
  selector:
    io.kompose.service: http-echo
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: test
  name: test
spec:
  ports:
  - name: "5678"
    port: 5678
    targetPort: 5678
  selector:
    io.kompose.service: test
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: test2
  name: test2
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: test2
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: http-echo
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: http-echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: http-echo
    spec:
      containers:
      - args:
        - -text=http-echo
        image: hashicorp/http-echo
        name: http-echo
        ports:
        - containerPort: 5678
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: compose-default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/compose-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/compose-default: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: test
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: test
    spec:
      containers:
      - args:
        - -text=test
        - "1"
        image: hashicorp/http-echo
        name: test
        ports:
        - containerPort: 5678
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: test2
  name: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: test2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: test2
    spec:
      containers:
      - args:
        - -listen=:8080
        - -text=hello world test2
        image: hashicorp/http-echo
        name: test2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
